// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextArea > should render default variant 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <label
      class="font-medium text-text-secondary text-[0.875rem] absolute top-[-11px] left-2 bg-white"
      data-testid="input-label"
    >
      Text area
    </label>
    <textarea
      class="block w-full px-3.5 py-[7px] outline-none border rounded text-text-secondary transition-all resize-none disabled:text-text-menu disabled:cursor-not-allowed active:shadow-none focus:ring-transparent placeholder:text-text-menu placeholder:font-normal font-medium text-[0.875rem] leading-[1.5rem] border-border-primary focus:shadow-text-field focus:border-primary hover:border-primary"
      data-testid="textarea"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea > should render primary variant 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <label
      class="font-medium text-text-secondary text-[0.875rem] absolute top-[-11px] left-2 bg-white"
      data-testid="input-label"
    >
      Text area
    </label>
    <textarea
      class="block w-full px-3.5 py-[7px] outline-none border rounded text-text-secondary transition-all resize-none disabled:text-text-menu disabled:cursor-not-allowed active:shadow-none focus:ring-transparent placeholder:text-text-menu placeholder:font-normal font-medium text-[0.875rem] leading-[1.5rem] border-border-primary focus:shadow-text-field focus:border-primary hover:border-primary"
      data-testid="textarea"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea > should render with error 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <label
      class="font-medium text-text-secondary text-[0.875rem] absolute top-[-11px] left-2 bg-white"
      data-testid="input-label"
    >
      Text area
    </label>
    <textarea
      class="block w-full px-3.5 py-[7px] outline-none border rounded text-text-secondary transition-all resize-none disabled:text-text-menu disabled:cursor-not-allowed active:shadow-none focus:ring-transparent placeholder:text-text-menu placeholder:font-normal font-medium text-[0.875rem] leading-[1.5rem] border-bg-error focus:shadow-text-field-error focus:border-bg-error hover:border-bg-error"
      data-testid="textarea"
    />
    <span
      class="text-[0.75rem] font-normal text-bg-error"
      data-testid="input-error-message"
    >
      Error message
    </span>
  </div>
</DocumentFragment>
`;
